# cpr_robot_customizer

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  feature.md
example/: description.launch  generic_robot.urdf.xacro  view_model.launch
launch/: accessories.launch  gazebo.launch  gazebo_rviz.launch  rviz.launch  view_model.launch
scripts/: environment_variables
urdf/: accessories.urdf.xacro
urdf/accessories/camera/: intel_realsense.urdf.xacro
urdf/accessories/gps/: garmin_18x.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro
urdf/accessories/imu/: microstrain.urdf.xacro  microstrain_gx5.urdf.xacro
urdf/accessories/laser/: hokuyo_ust10.urdf.xacro  hokuyo_ust10lx.urdf.xacro
