<?xml version="1.0"?>
<package>
  <name>generic_robot</name>
  <version>0.8.0</version>
  <description>Generic robot package.</description>

  <maintainer email="jyang@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="jyang@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
