<?xml version="1.0"?>
<package format="2">
  <name>generic_robot</name>
  <version>0.0.0</version>
  <description>Generic robot package.</description>

  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <author email="jyang@clearpathrobotics.com">Joey Yang</author>

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>roslaunch</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>nmea_comms</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sick_scan</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
